--- a/style.css
+++ b/style.css
@@ -539,6 +539,7 @@ p{
 	/*border:2px solid black;*/
 	
 	margin:0;
+	margin-top: 15%;
 }
 .container_slider .slideshow img{
 	/*Border for mark*/
@@ -895,7 +896,7 @@ input:focus{
 	text-align:center;
 	overflow:hidden;
 	border:2px solid #E3E6EA;
-	padding-bottom: 4%;
+	padding-bottom: 7%;
 }
 .sec7_down .box_sec7 img{
 	width:100%;
